Oppgrader Gradle til 8.8 og JVM 21